--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,8 @@
     <string name="app_name">stroke-android</string>
     <string name="preference_file_key">com.stroke.stroke-android.PREFERENCE_FILE_KEY</string>
     <string name="is_onboarding_shown_key">is_onboarding_shown</string>
+    <string name="favorite">Favorite</string>
+    <string name="search">Search</string>
+    <string name="explore">Explore</string>
+    <string name="search_for_anything">Search for anything</string>
 </resources>
