implemented post details screen

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
     <string name="search">Search</string>
     <string name="explore">Explore</string>
     <string name="search_for_anything">Search for anything</string>
+    <string name="back">Back</string>
 </resources>
