--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,5 @@
     <string name="explore">Explore</string>
     <string name="search_for_anything">Search for anything</string>
     <string name="back">Back</string>
+    <string name="no_result">No Result</string>
 </resources>
